fix: line-clamp on small devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply relative w-full bg-[url('./assets/texture.jpg')] bg-[length:64px_64px] bg-fixed bg-repeat text-custom-text;
+  @apply relative h-full w-full bg-[url('./assets/texture.jpg')] bg-[length:64px_64px] bg-fixed bg-repeat text-custom-text;
 }
 
 body::before {
